--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1342,6 +1342,40 @@
 		margin-left:396px;
 	}
 	
+	#share{
+	margin-top: -425px;
+	margin-left: 909px;
+	
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:0;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	}
+	}
+	}
+	
+	
 	#follow{
 	margin-top:-383px;
 	margin-left:910px;
@@ -1904,6 +1938,39 @@
 	
 	#pousse-gauche2{
 		margin-left:396px;
+	}
+
+	#share{
+	margin-top: -385px;
+	margin-left: 909px;
+	
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:0;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	}
+	}
 	}
 
 
@@ -2780,6 +2847,39 @@
 	
 	#pousse-gauche2{
 		margin-left:396px;
+	}
+	
+	#share{
+	margin-top: -425px;
+	margin-left: 909px;
+	
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:0;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	}
+	}
 	}
 	
 	#follow{
@@ -3897,6 +3997,41 @@
 	#pousse-gauche2{
 		margin-left:396px;
 	}
+	
+	#share{
+	margin-top: -425px;
+	margin-left: 909px;
+	
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:0;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	}
+	}
+	}
+	
+	
 	
 	#follow{
 	margin-top:-383px;
