--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -320,6 +320,40 @@
 		}
 	}
 	
+	
+	#share{
+	margin-top: -313px;
+	margin-left: 947px;
+	
+	.texte{
+	margin-top: -34px;
+	margin-left: 28px;
+	background-color: #000;
+	height: 24px;
+	width: 80px;
+	font-family: "gotham";
+	font-size: 16px;
+	color: #FFF;
+	padding-left: 8px;
+	padding-top:4px;
+		
+		.okk{
+		margin-top: -30px;
+		opacity:0;
+		}
+	}
+
+	
+	.ok{
+	position: relative;
+	z-index:0;
+	.okk{
+	margin-top: -30px;
+	opacity:0;
+	}
+	}
+	}
+	
 	#follow{
 	margin-top:-239px;
 	margin-left:947px;
