--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -3,7 +3,7 @@
 	<div class="row" id="ld-title">
 		
 		<div class="row" id="ld-image-superieure">
-			<%= image_tag "5-01.png", class: "image"%>
+			<%= image_tag "saute_mouton-01.png", class: "image"%>
 			<div class="image-sign">
 				<%= image_tag("signe-defi.png", alt: "Moutoners", class: "image2")%>
 			</div>
@@ -180,6 +180,14 @@
 		</div>
 	</div>
 
+
+	<div class="span1" id="share">
+			<div class="ok">
+			<%=image_tag('facebook_petit.png', :alt => 'Moutoners', class: "image")%>)
+			<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
+			<div class="texte">Partager
+			<div class="okk"><%= social_share_button_tag(@challenge.title) %></div></div>
+	</div>
 
 		<div class="span1" id="follow">
 			<div class="follow">
