--- a/app/views/shared/_challenge_badge.html.erb
+++ b/app/views/shared/_challenge_badge.html.erb
@@ -3,13 +3,13 @@
 			<div class="span6" id="challenge-badge1">
 
 				<% if challenge.type_deb == 2%>
-					<%= link_to image_tag("image-ld.png"), challenge, class: "image"%>
+					<%= link_to image_tag("image-ld-01.png"), challenge, class: "image"%>
 				<%elsif challenge.type_deb == 3 %>
-					<%= link_to image_tag("2048.jpg"), challenge, class: "image"%>
+					<%= link_to image_tag("2048-01.jpg"), challenge, class: "image"%>
 				<%elsif challenge.type_deb == 4 %>
-					<%= link_to image_tag("2048 (1).jpg"), challenge, class: "image"%>
+					<%= link_to image_tag("2048 (1)-01.jpg"), challenge, class: "image"%>
 				<%elsif challenge.type_deb == 8 %>
-					<%= link_to image_tag("shepherd.jpg"), challenge, class: "image"%>
+					<%= link_to image_tag("british-01.png"), challenge, class: "image"%>
 				<%end%>
 				
 				
