--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,5 +1,5 @@
 <% if current_user && current_user.try(:admin?)%>
-	<%= link_to "promote", publish_debate_path(@debate)%>
+	<%= link_to "promote", promote_debate_path(@debate)%>
 <% end %>
 
 <section id="open-debate">
